--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <title>Nieuwjaar</title>
+  <meta name="theme-color" content="#282c34">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
